fixed: shpopping cart item<1  delete

--- a/Yummy/Teacher.html
+++ b/Yummy/Teacher.html
@@ -55,9 +55,9 @@
                 <li><a href="desserts.html#/presents">禮盒</a></li>
               </ul>
             </li>
-            <li><a href="#events">課程</a></li>
-            <li><a href="#chefs">師資</a></li>
-            <li><a href="#gallery">環境介紹</a></li>
+            <li><a href="Lessons.html">課程</a></li>
+            <li><a href="Teacher.html">師資</a></li>
+            <li><a href="#promotion">近期活動</a></li>
             <li class="dropdown">
               <a href="#"
                 ><span>常見問題</span>
