--- a/Yummy/desserts.html
+++ b/Yummy/desserts.html
@@ -366,17 +366,12 @@
     <script src="assets/js/dessert.js"></script>
     <script src="assets/js/longCake.js"></script>
     <script src="assets/js/presents.js"></script>
-    <!-- <script src="assets/js/suggest.js"></script> -->
+    <script src="assets/js/getdesserts.js"></script>
     <script src="assets/js/choco.js"></script>
     <script src="assets/js/appDes.js"></script>
     <script src="assets/js/login.js"></script>
 
     <!-- <script src="assets/js/appDessert.js"></script> -->
-    <!-- <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-      crossorigin="anonymous"
-    ></script> -->
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
