feat: Update NavBar link & Add Pagination

--- a/Yummy/Lessons.html
+++ b/Yummy/Lessons.html
@@ -48,7 +48,7 @@
               <li><a href="index.html">首頁</a></li>
               <li><a href="#about">關於我們</a></li>
               <li class="dropdown">
-                <a href="#menu"
+                <a href="desserts.html#/"
                   ><span>甜點</span>
                   <i class="bi bi-chevron-down dropdown-indicator"></i
                 ></a>
