--- a/Yummy/desserts.html
+++ b/Yummy/desserts.html
@@ -60,7 +60,7 @@
               <li><a href="index.html">首頁</a></li>
               <li><a href="#about">關於我們</a></li>
               <li class="dropdown">
-                <a href="#menu"
+                <a href="desserts.html#/"
                   ><span>甜點</span>
                   <i class="bi bi-chevron-down dropdown-indicator"></i
                 ></a>
@@ -169,6 +169,14 @@
               <li class="nav-item m-1">
                 <router-link
                   class="nav-link"
+                  to="/getdesserts"
+                  style="color: var(--color-text)"
+                  ><h4>SIERRA 甜點</h4></router-link
+                >
+              </li>
+              <li class="nav-item m-1">
+                <router-link
+                  class="nav-link"
                   to="/moldCake"
                   style="color: var(--color-text)"
                   ><h4>整模蛋糕</h4></router-link
@@ -209,14 +217,14 @@
                   ><h4>禮盒</h4></router-link
                 >
               </li>
-              <li class="nav-item m-1">
+              <!-- <li class="nav-item m-1">
                 <router-link
                   class="nav-link"
                   to="/choco"
                   style="color: var(--color-text)"
                   ><h4>巧克力大賞</h4></router-link
                 >
-              </li>
+              </li> -->
               <!-- End tab nav item -->
             </ul>
 
