--- a/Yummy/index.html
+++ b/Yummy/index.html
@@ -638,10 +638,10 @@
 
         <!-- ======= Contact Section ======= -->
         <section id="contact" class="contact">
-          <div class="container" data-aos="fade-up">
-            <div class="section-header">
-              <!-- <h2>Contact</h2> -->
-              <div class="mb-3"></div>
+          <!-- <div class="container" data-aos="fade-up">
+            <div class="section-header"> -->
+          <!-- <h2>Contact</h2> -->
+          <!--  <div class="mb-3"></div>
               <p>Need Help? <span>Contact Us</span></p>
             </div>
 
@@ -652,9 +652,9 @@
                 frameborder="0"
                 allowfullscreen
               ></iframe>
-            </div>
-            <!-- End Google Maps -->
-          </div>
+            </div>-->
+          <!-- End Google Maps -->
+          <!--  </div> -->
         </section>
         <!-- End Contact Section -->
       </main>
