--- a/Yummy/OrderDetail.html
+++ b/Yummy/OrderDetail.html
@@ -57,7 +57,7 @@
             <li><a href="index.html">首頁</a></li>
             <li><a href="#about">關於我們</a></li>
             <li class="dropdown">
-              <a href="#menu"
+              <a href="desserts.html#/"
                 ><span>甜點</span>
                 <i class="bi bi-chevron-down dropdown-indicator"></i
               ></a>
@@ -313,7 +313,6 @@
                     <div
                       class="orderCircle circle active"
                       v-if="lessonorder.statusName === '訂單已完成'"
-                     
                     >
                       訂單成立
                     </div>
