feat: navbar add logo , and delete  member center in navbar

--- a/Yummy/EditPassword.html
+++ b/Yummy/EditPassword.html
@@ -54,7 +54,7 @@
         <a
           href="index.html"
           class="logo d-flex align-items-center me-auto me-lg-0"
-        >
+          ><img src="assets/img/logoNew.png" alt="" />
           <h1>SIERRA</h1>
         </a>
 
@@ -63,7 +63,7 @@
             <li><a href="index.html">首頁</a></li>
             <li><a href="#about">關於我們</a></li>
             <li class="dropdown">
-              <a href="#menu"
+              <a href="desserts.html#/"
                 ><span>甜點</span>
                 <i class="bi bi-chevron-down dropdown-indicator"></i
               ></a>
@@ -85,17 +85,6 @@
               ></a>
               <ul>
                 <li><a href="rule.html">常見問題</a></li>
-                <li class="dropdown">
-                  <a href="/MemberCenter.html"
-                    ><span>會員中心</span>
-                    <i class="bi bi-chevron-down dropdown-indicator"></i
-                  ></a>
-                  <ul>
-                    <li>
-                      <a href="/MemberCenter.html">會員優惠券</a>
-                    </li>
-                  </ul>
-                </li>
               </ul>
             </li>
             <li><a href="#contact">聯絡我們</a></li>
@@ -105,17 +94,7 @@
 
         <div class="d-flex" style="justify-content: space-between">
           <!-- <a class="btn-book-a-table" href="lessonBook.html">預定課程</a> -->
-          <div class="shoppingCartDiv me-3">
-            <a
-              class="js-toggle-cart"
-              href="#"
-              title="View cart"
-              @click="getCartItems()"
-            >
-              <span class="shoppingCart badge badge-pill badge-warning"></span>
-              <i class="bi bi-bag-fill" style="font-size: 35px"></i>
-            </a>
-          </div>
+          <div class="shoppingCartDiv me-3"></div>
         </div>
 
         <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
