--- a/Yummy/ResetPassword.html
+++ b/Yummy/ResetPassword.html
@@ -37,8 +37,8 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/main.css" rel="stylesheet" />
     <link href="assets/css/login.css" rel="stylesheet" />
+    <link href="assets/css/main.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.21/dist/sweetalert2.min.css"
@@ -54,7 +54,7 @@
         <a
           href="index.html"
           class="logo d-flex align-items-center me-auto me-lg-0"
-        >
+          ><img src="assets/img/logoNew.png" alt="" />
           <h1>SIERRA</h1>
         </a>
 
@@ -63,7 +63,7 @@
             <li><a href="index.html">首頁</a></li>
             <li><a href="#about">關於我們</a></li>
             <li class="dropdown">
-              <a href="#menu"
+              <a href="desserts.html#/"
                 ><span>甜點</span>
                 <i class="bi bi-chevron-down dropdown-indicator"></i
               ></a>
@@ -85,7 +85,7 @@
               ></a>
               <ul>
                 <li><a href="rule.html">常見問題</a></li>
-                <li class="dropdown">
+                <!-- <li class="dropdown">
                   <a href="/MemberCenter.html"
                     ><span>會員中心</span>
                     <i class="bi bi-chevron-down dropdown-indicator"></i
@@ -95,7 +95,7 @@
                       <a href="/MemberCenter.html">會員優惠券</a>
                     </li>
                   </ul>
-                </li>
+                </li> -->
               </ul>
             </li>
             <li><a href="#contact">聯絡我們</a></li>
@@ -105,17 +105,7 @@
 
         <div class="d-flex" style="justify-content: space-between">
           <!-- <a class="btn-book-a-table" href="lessonBook.html">預定課程</a> -->
-          <div class="shoppingCartDiv me-3">
-            <a
-              class="js-toggle-cart"
-              href="#"
-              title="View cart"
-              @click="getCartItems()"
-            >
-              <span class="shoppingCart badge badge-pill badge-warning"></span>
-              <i class="bi bi-bag-fill" style="font-size: 35px"></i>
-            </a>
-          </div>
+          <div class="shoppingCartDiv me-3"></div>
         </div>
 
         <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -185,8 +175,8 @@
             <div>
               <h4>地址</h4>
               <p>
-                A108 Adam Street <br />
-                New York, NY 535022 - US<br />
+                桃園市 中壢區 <br />
+                新生路二段421號<br />
               </p>
             </div>
           </div>
@@ -196,8 +186,8 @@
             <div>
               <h4>預定方式</h4>
               <p>
-                <strong>Phone:</strong> +1 5589 55488 55<br />
-                <strong>Email:</strong> info@example.com<br />
+                <strong>電話:</strong> 03 426 0163<br />
+                <strong>Email:</strong> fuen283@ispan.com<br />
               </p>
             </div>
           </div>
@@ -208,13 +198,13 @@
               <h4>營業時間</h4>
               <p>
                 <strong>星期一到六: 11AM</strong> - 23PM<br />
-                Sunday: Closed
+                星期日: 公休
               </p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Follow Us</h4>
+            <h4>追蹤我們</h4>
             <div class="social-links d-flex">
               <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
