--- a/Yummy/desserts.html
+++ b/Yummy/desserts.html
@@ -82,17 +82,6 @@
                 ></a>
                 <ul>
                   <li><a href="rule.html">常見問題</a></li>
-                  <li class="dropdown">
-                    <a href="/MemberCenter.html"
-                      ><span>會員中心</span>
-                      <i class="bi bi-chevron-down dropdown-indicator"></i
-                    ></a>
-                    <ul>
-                      <li>
-                        <a href="/MemberCenter.html">會員優惠券</a>
-                      </li>
-                    </ul>
-                  </li>
                 </ul>
               </li>
               <li><a href="#contact">聯絡我們</a></li>
@@ -292,8 +281,8 @@
               <div>
                 <h4>地址</h4>
                 <p>
-                  桃園市中壢區 <br />
-                  New York, NY 535022 - US<br />
+                  桃園市 中壢區 <br />
+                  新生路二段421號<br />
                 </p>
               </div>
             </div>
@@ -303,8 +292,8 @@
               <div>
                 <h4>預定方式</h4>
                 <p>
-                  <strong>電話:</strong> +1 5589 55488 55<br />
-                  <strong>Email:</strong> info@example.com<br />
+                  <strong>電話:</strong> 03 426 0163<br />
+                  <strong>Email:</strong> fuen283@ispan.com<br />
                 </p>
               </div>
             </div>
@@ -315,13 +304,13 @@
                 <h4>營業時間</h4>
                 <p>
                   <strong>星期一到六: 11AM</strong> - 23PM<br />
-                  Sunday: Closed
+                  星期日: 公休
                 </p>
               </div>
             </div>
 
             <div class="col-lg-3 col-md-6 footer-links">
-              <h4>Follow Us</h4>
+              <h4>追蹤我們</h4>
               <div class="social-links d-flex">
                 <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
@@ -343,7 +332,6 @@
         </div>
       </footer>
       <!-- End Footer -->
-
       <a
         href="#"
         class="scroll-top d-flex align-items-center justify-content-center"
