--- a/Yummy/index.html
+++ b/Yummy/index.html
@@ -88,7 +88,7 @@
                 ></a>
                 <ul>
                   <li><a href="rule.html">常見問題</a></li>
-                  <li class="dropdown">
+                  <!-- <li class="dropdown">
                     <a href="/MemberCenter.html"
                       ><span>會員中心</span>
                       <i class="bi bi-chevron-down dropdown-indicator"></i
@@ -98,7 +98,7 @@
                         <a href="/MemberCenter.html">會員優惠券</a>
                       </li>
                     </ul>
-                  </li>
+                  </li> -->
                 </ul>
               </li>
               <li><a href="#contact">聯絡我們</a></li>
