--- a/Yummy/Teacher.html
+++ b/Yummy/Teacher.html
@@ -43,7 +43,7 @@
             <li><a href="index.html">首頁</a></li>
             <li><a href="#about">關於我們</a></li>
             <li class="dropdown">
-              <a href="#menu"
+              <a href="desserts.html#/"
                 ><span>甜點</span>
                 <i class="bi bi-chevron-down dropdown-indicator"></i
               ></a>
@@ -65,12 +65,6 @@
               ></a>
               <ul>
                 <li><a href="rule.html">常見問題</a></li>
-                <li class="dropdown">
-                  <a href="/MemberCenter.html"
-                    ><span>會員中心</span>
-                    <i class="bi bi-chevron-down dropdown-indicator"></i
-                  ></a>
-                </li>
               </ul>
             </li>
             <li><a href="#contact">聯絡我們</a></li>
