--- a/Yummy/shoppingCart.html
+++ b/Yummy/shoppingCart.html
@@ -890,6 +890,7 @@
                     text: res.data.message,
                   });
                 }
+                this.couponCode = "";
               });
           },
         },
