feat: Add Navbar link

--- a/Yummy/dessertProducts.html
+++ b/Yummy/dessertProducts.html
@@ -63,6 +63,7 @@
                 <i class="bi bi-chevron-down dropdown-indicator"></i
               ></a>
               <ul>
+                <li><a href="desserts.html#">SIERRA 甜點</a></li>
                 <li><a href="desserts.html#/moldCake">整模蛋糕</a></li>
                 <li><a href="desserts.html#/roomTemperature">常溫蛋糕</a></li>
                 <li><a href="desserts.html#/snack">點心</a></li>
