--- a/Yummy/MemberCenter.html
+++ b/Yummy/MemberCenter.html
@@ -136,53 +136,44 @@
         <h1>SIERRA</h1>
       </a>
 
-        <nav id="navbar" class="navbar">
-          <ul>
-            <li><a href="index.html">首頁</a></li>
-            <li><a href="#about">關於我們</a></li>
-            <li class="dropdown">
-              <a href="desserts.html#/"
-                ><span>甜點</span>
-                <i class="bi bi-chevron-down dropdown-indicator"></i
-              ></a>
-              <ul>
-                <li><a href="desserts.html#/moldCake">整模蛋糕</a></li>
-                <li><a href="desserts.html#/roomTemperature">常溫蛋糕</a></li>
-                <li><a href="desserts.html#/snack">點心</a></li>
-                <li><a href="desserts.html#/longCake">長條蛋糕</a></li>
-                <li><a href="desserts.html#/presents">禮盒</a></li>
-              </ul>
-            </li>
-            <li><a href="Lessons.html">課程</a></li>
-            <li><a href="Teacher.html">師資</a></li>
-            <li><a href="#promotion">近期活動</a></li>
-            <li class="dropdown">
-              <a href="#"
-                ><span>常見問題</span>
-                <i class="bi bi-chevron-down dropdown-indicator"></i
-              ></a>
-              <ul>
-                <li><a href="rule.html">常見問題</a></li>
-              </ul>
-            </li>
-            <li><a href="#contact">聯絡我們</a></li>
-          </ul>
-        </nav>
-        <!-- .navbar -->
-        <div class="d-flex" style="justify-content: space-between">
-          <!-- <a class="btn-book-a-table" href="lessonBook.html">預定課程</a> -->
-          <div class="shoppingCartDiv me-3">
-            <a
-              class="js-toggle-cart"
-              href="#"
-              title="View cart"
-              @click="getCartItems()"
-            >
-              <span class="shoppingCart badge badge-pill badge-warning"></span>
-              <i class="bi bi-bag-fill" style="font-size: 35px"></i>
-            </a>
-          </div>
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a href="index.html">首頁</a></li>
+          <li><a href="#about">關於我們</a></li>
+          <li class="dropdown">
+            <a href="desserts.html#/"><span>甜點</span>
+              <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+            <ul>
+              <li><a href="desserts.html#/moldCake">整模蛋糕</a></li>
+              <li><a href="desserts.html#/roomTemperature">常溫蛋糕</a></li>
+              <li><a href="desserts.html#/snack">點心</a></li>
+              <li><a href="desserts.html#/longCake">長條蛋糕</a></li>
+              <li><a href="desserts.html#/presents">禮盒</a></li>
+            </ul>
+          </li>
+          <li><a href="Lessons.html">課程</a></li>
+          <li><a href="Teacher.html">師資</a></li>
+          <li><a href="#promotion">近期活動</a></li>
+          <li class="dropdown">
+            <a href="#"><span>常見問題</span>
+              <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+            <ul>
+              <li><a href="rule.html">常見問題</a></li>
+            </ul>
+          </li>
+          <li><a href="#contact">聯絡我們</a></li>
+        </ul>
+      </nav>
+      <!-- .navbar -->
+      <div class="d-flex" style="justify-content: space-between">
+        <!-- <a class="btn-book-a-table" href="lessonBook.html">預定課程</a> -->
+        <div class="shoppingCartDiv me-3">
+          <a class="js-toggle-cart" href="#" title="View cart" @click="getCartItems()">
+            <span class="shoppingCart badge badge-pill badge-warning"></span>
+            <i class="bi bi-bag-fill" style="font-size: 35px"></i>
+          </a>
         </div>
+      </div>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
@@ -663,8 +654,8 @@
           <div>
             <h4>地址</h4>
             <p>
-              A108 Adam Street <br />
-              New York, NY 535022 - US<br />
+              桃園市 中壢區 <br />
+              新生路二段421號<br />
             </p>
           </div>
         </div>
