feat: Modify GoogleRegister Frontend Modify GoogleRegister error alert

--- a/Yummy/LogIn.html
+++ b/Yummy/LogIn.html
@@ -612,8 +612,8 @@ https://cdn.jsdelivr.net/npm/sweetalert2@11.7.21/dist/sweetalert2.all.min.js
           } catch (error) {
             Swal.fire({
               icon: "error",
-              title: error.response.data,
-              text: "請更換您的使用者名稱!",
+              title: "發生錯誤",
+              text: error.response.data,
             });
             console.error("Error occurred:", error);
           }
