feat: (Frontend) add  two demo buttons

--- a/Yummy/EditPassword.html
+++ b/Yummy/EditPassword.html
@@ -86,7 +86,7 @@
 
   <main id="main" class="login-lock-height">
     <div class="w-100 h-100 d-flex justify-content-center align-items-center login-background-image">
-      <div class="wrapper" style="z-index: 5">
+      <div class="wrapper" style="z-index: 5;overflow:visible">
         <div class="form-box resetPassword">
           <h2>變更密碼</h2>
           <div class="text-danger error-list mt-3" id="error-list">
@@ -113,7 +113,8 @@
               <input type="password" name="confirmNewPassword" id="confirm-new-password" required />
               <label>確認新密碼</label>
             </div>
-            <button type="submit" class="btn-edit-password">更改密碼</button>
+            <button type="submit" class="btn-edit-password">確認變更</button>
+            <button class="btn btn-primary" id="edit-password-demo" type="button">demo</button>
           </form>
         </div>
       </div>
@@ -259,6 +260,13 @@
         }
       }
     }
+  </script>
+  <script>
+    document.querySelector("#edit-password-demo").addEventListener("click", () => {
+      document.querySelector("#old-password").value = "qweasdzxc123456789";
+      document.querySelector("#new-password").value = "ewqdsacxz321654987";
+      document.querySelector("#confirm-new-password").value = "ewqdsacxz321654987";
+    })
   </script>
 </body>
 
