--- a/Yummy/ResetPassword.html
+++ b/Yummy/ResetPassword.html
@@ -97,7 +97,7 @@
 
   <main id="main" class="login-lock-height">
     <div class="w-100 h-100 d-flex justify-content-center align-items-center login-background-image">
-      <div class="wrapper" style="height: 400px; z-index: 5">
+      <div class="wrapper" style="height: 400px; z-index: 5;overflow:visible">
         <div class="form-box resetPassword">
           <h2>重設密碼</h2>
           <div class="text-danger error-list mt-3" id="error-list">
@@ -118,7 +118,8 @@
               <input type="password" name="confirmPassword" id="reset-confirmPassword" required />
               <label>確認新密碼</label>
             </div>
-            <button type="submit" class="btn-reset-password">更改密碼</button>
+            <button type="submit" class="btn-reset-password">確認重設</button>
+            <button class="btn btn-primary" id="reset-password-demo" type="button">demo</button>
           </form>
         </div>
       </div>
@@ -271,6 +272,12 @@
         }
       }
     }
+  </script>
+  <script>
+    document.querySelector("#reset-password-demo").addEventListener("click", () => {
+      document.querySelector("#reset-password").value = "qweasdzxc123456789";
+      document.querySelector("#reset-confirmPassword").value = "qweasdzxc123456789";
+    })
   </script>
 </body>
 
